--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
+    "joi": "^17.2.1",
+    "joi-objectid": "^3.0.1",
+    "mongoose": "^5.10.9",
     "on-finished": "^2.3.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
