--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     ]
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-async-errors": "^3.1.1",
+    "helmet": "^4.1.1",
     "http-status-codes": "^2.1.4",
     "joi": "^17.2.1",
     "joi-objectid": "^3.0.1",
