--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=4000
 AUTH_MODE=false
-JWT_SECRET_KEY=secret-key
+JWT_SECRET_KEY=oleksii
 # Set your database connection information here
 MONGO_CONNECTION_STRING=mongodb+srv://OleksiiZhuk:223132qq@cluster0.ljh51.mongodb.net/Onix?retryWrites=true&w=majority
