--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
@@ -54,6 +55,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.2.1",
     "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "on-finished": "^2.3.0",
     "swagger-ui-express": "4.1.2",
